--- a/order.html
+++ b/order.html
@@ -1,35 +1,66 @@
-Order a Melongram
+<!doctype html>
+<html>
 
-There's no better way to show a loved one you care than with a Melongram.
+<head>
+    <title>Order a Melongram</title>
+</head>
 
-Each Melongram comes with a custom message printed on high-quality cardstock
-and your choice of a hand-picked, premium melon.
+<body>
+    <h1>Order a Melongram</h1>
+    <p>
+        There's no better way to show a loved one you care than with a Melongram.
+    </p>
+    <p>
+        Each Melongram comes with a custom message printed on high-quality cardstock
+        and your choice of a hand-picked, premium melon.
+    </p>
+    <h2>Melon Options</h2>
+    <p>
+        Choose from one of these melons:
+    </p>
+    <table>
+        <tr>
+            <td>Watermelon</td>
+            <td>$1,200.00</td>
+        </tr>
+        <tr>
+            <td>Canteloupe</td>
+            <td>$400.00</td>
+        </tr>
+        <tr>
+            <td>Honeydew</td>
+            <td>$1,750.00</td>
+        </tr>
+    </table>
 
-Melon Options
+    <h2> Order Form </h2>
+    <form>
 
-Choose from one of these melons:
+        Your name
+        <input type="text" name="name" id="user-name">
 
-Watermelon $1,200.00
-Canteloupe $400.00
-Honeydew $1,750.00
+        Who are we sending this to?
+        <input type="text" name="recipient" id="recipient">
 
-Order Form
+        Choose a melon
+        <select name="melon" id="melon-type">
+            <option value="watermelon">Watermelon</option>
+            <option value="canteloupe">Canteloupe</option>
+            <option value="honeydew">Honeydew</option>
+        </select>
 
-Your name
+        When should we deliver?
 
-Who are we sending this to?
+        <input type="radio" name="time" value="morning">Morning
+        <input type="radio" name="time" value="evening">Evening
+        <input type="radio" name="time" value="any-time">Any time
 
-Choose a melon
-Watermelon
-Canteloupe
-Honeydew
+        Enter your message:
+        <textarea name="message" id="message"></textarea>
 
-When should we deliver?
-Morning
-Evening
-Any time
+        Subscribe to our newsletter
+        <input type="checkbox" name="'subscribe" value="yes">Yes
+    </form>
+</body>
 
-Enter your message:
-
-Subscribe to our newsletter
-Yes
+</html>
